--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
 	<nav>nav</nav>
 </header>
 <main>
+<h1>これは見出しです</h1>
 	<article>
-		<h1>これは見出しです</h1>
 		<p>こんにちは</p>
+		<button id="btn"><a href="#">click!</a></button>
 	</article>
 	<aside>
 		サイドバー
 	</aside>
 </main>
 <footer>
-	footer
+	<small>copy right</small>
 </footer>
 <script src="main.js"></script>
 </body>
