--- a/index.html
+++ b/index.html
@@ -2,29 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
-	<link rel="stylesheet" href="style.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<title>GitHub</title>
+	<title>My web</title>
+  <link rel="stylesheet" href="asset/css/normalize.css">
+  <link rel="stylesheet" href="asset/css/reset.css">
+  <link rel="stylesheet" href="asset/css/style.css">
 </head>
 <body>
-<header>
-	header
-	<nav>nav</nav>
-</header>
-<main>
-<h1>これは見出しです</h1>
-	<article>
-		<p>こんにちは</p>
-		<button id="btn"><a href="#">click!</a></button>
-	</article>
-	<aside>
-		サイドバー
-	</aside>
-</main>
-<footer>
-	<small>copy right</small>
-</footer>
-<script src="main.js"></script>
+  <h1 class="title">My web</h1>
+  <p class="text">This is template files of my web site.</p>
+<script src="asset/lib/jquery-2.1.4.min.js"></script>
+<script src="asset/js/common.js"></script>
+<script src="asset/js/app.js"></script>
 </body>
 </html>
